[ADD]Initial logit to move player

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="game-container">
       <canvas id="game-canvas"></canvas>
       <div class="game-btns">
-        <button class="game-btns_btn" id="up-btn">Arriba</button>
-        <button class="game-btns_btn" id="rigth-btn">Derecha</button>
-        <button class="game-btns_btn" id="down-btn">Abajo</button>
-        <button class="game-btns_btn" id="left-btn">Izquierda</button>
+        <button class="game-btns_btn" id="up-btn" direction="ArrowUp">Arriba</button>
+        <button class="game-btns_btn" id="right-btn" direction="ArrowRight">Derecha</button>
+        <button class="game-btns_btn" id="down-btn" direction="ArrowDown">Abajo</button>
+        <button class="game-btns_btn" id="left-btn" direction="ArrowLeft">Izquierda</button>
       </div>
     </div>
     <script src="./src/maps.js"></script>
