--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="game-container">
-      <canvas id="game-canvas"></canvas>
+      <canvas id="game-canvas-map"></canvas>
+      <canvas id="game-canvas-player"></canvas>
       <div class="game-btns">
         <button class="game-btns_btn" id="up-btn" direction="ArrowUp">Arriba</button>
         <button class="game-btns_btn" id="right-btn" direction="ArrowRight">Derecha</button>
