[ADD]: Lives and game over logic

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>JS GAME</title>
   </head>
   <body>
+    <div class="game-messages">
+      <span id="game-messages-lifes">Vidas: </span>
+      <span id="game-messages-level">Nivel:</span>
+      <span id="game-messages-info"></span>
+    </div>
     <div class="game-container">
       <canvas id="game-canvas-map"></canvas>
       <canvas id="game-canvas-player"></canvas>
